--- a/gradle.properties
+++ b/gradle.properties
@@ -25,11 +25,11 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 
 linguaTaskGroup=Lingua-specific
 
-linguaGroupId=com.github.marcono1234
+linguaGroupId=com.github.jellybrick
 
 linguaArtifactId=tiny-lingua
 
-projectVersion=1.1.1
+projectVersion=1.1.2
 upstreamProjectVersion=1.2.2
 
 linguaName=Tiny Lingua
@@ -40,13 +40,13 @@ linguaLicenseName=The Apache License, Version 2.0
 
 linguaLicenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
 
-linguaWebsiteUrl=https://github.com/Marcono1234/tiny-lingua
+linguaWebsiteUrl=https://github.com/JellyBrick/tiny-lingua
 
-linguaScmConnection=scm:git:git://github.com/Marcono1234/tiny-lingua.git
+linguaScmConnection=scm:git:git://github.com/JellyBrick/tiny-lingua.git
 
-linguaScmDeveloperConnection=scm:git:ssh://github.com:Marcono1234/tiny-lingua.git
+linguaScmDeveloperConnection=scm:git:ssh://github.com:JellyBrick/tiny-lingua.git
 
-linguaScmUrl=https://github.com/Marcono1234/tiny-lingua
+linguaScmUrl=https://github.com/JellyBrick/tiny-lingua
 
 linguaSupportedDetectors=Optimaize,OpenNLP,Tika,Lingua
 
